--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ permalink:           pretty
 # Setup
 title:               Amiya Sahu
 tagline:             "Web Developer"
-description:         'A blog made from an IT lover about IT and other stuff (insert madness here). Based on the awesome <a href="https://github.com/poole/lanyon" target="_blank">Lanyon</a> theme, made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:         'My personal blog'
 url:                 https://amiyasahu.github.io
 baseurl:             ''
 paginate:            5
