--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 gems:                [jekyll-paginate]
 markdown:            redcarpet
-#highlighter:         pygments
+highlighter:         pygments
 
 # Permalinks
 #
@@ -12,7 +12,7 @@ permalink:           pretty
 # Setup
 title:               Amiya Sahu
 tagline:             "Web Developer"
-description:         'My personal blog'
+description:         'I am a Web Developer , Blogger and Coffee addict.<br/> Java developer by profession , Q2A developer by addiction.<br/> This is my personal website where I write few stuff which could be useful for other developers .'
 url:                 https://amiyasahu.github.io
 baseurl:             https://amiyasahu.github.io
 paginate:            5
