--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown:            redcarpet
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
+permalink:           none
 #relative_permalinks: true
 
 # Setup
