Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -66,3 +66,4 @@ google_analytics: UA-57146880-1
 
 #additional settings 
 envrionment : prod    #defines which envriment it is running
+theme: jekyll-theme-architect
